asamint/parsers/dcm20Parser.py
# Generated from dcm20.g4 by ANTLR 4.8
import sys
from io import StringIO

from antlr4 import *


if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class dcm20Parser(Parser):

    grammarFileName = "dcm20.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'\n'",
        "'KONSERVIERUNG_FORMAT'",
        "'2.0'",
        "'MODULKOPF'",
        "'FUNKTIONEN'",
        "'END'",
        "'FKT'",
        "'VARIANTENKODIERUNG'",
        "'KRITERIUM'",
        "'FESTWERT'",
        "'WERT'",
        "'TEXT'",
        "'FESTWERTEBLOCK'",
        "'KENNLINIE'",
        "'FESTKENNLINIE'",
        "'GRUPPENKENNLINIE'",
        "'KENNFELD'",
        "'FESTKENNFELD'",
        "'GRUPPENKENNFELD'",
        "'STUETZSTELLENVERTEILUNG'",
        "'TEXTSTRING'",
        "'EINHEIT_X'",
        "'EINHEIT_Y'",
        "'EINHEIT_W'",
        "'LANGNAME'",
        "'DISPLAYNAME'",
        "'VAR'",
        "','",
        "'='",
        "'FUNKTION'",
        "'ST/X'",
        "'ST_TX/X'",
        "'ST/Y'",
        "'ST_TX/Y'",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "'-'",
    ]

    symbolicNames = [
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "NAME",
        "TEXT",
        "INT",
        "FLOAT",
        "MINUS",
        "WS",
        "COMMENT",
    ]

    RULE_konservierung = 0
    RULE_kons_kopf = 1
    RULE_modulkopf_info = 2
    RULE_mod_zeile = 3
    RULE_mod_anf_zeile = 4
    RULE_mod_fort_zeile = 5
    RULE_mod_ele_name = 6
    RULE_mod_ele_wert = 7
    RULE_funktionsdef = 8
    RULE_funktionszeile = 9
    RULE_fkt_version = 10
    RULE_fkt_langname = 11
    RULE_variantendef = 12
    RULE_variantenkrit = 13
    RULE_krit_name = 14
    RULE_krit_wert = 15
    RULE_kons_rumpf = 16
    RULE_kenngroesse = 17
    RULE_kennwert = 18
    RULE_kennwerteblock = 19
    RULE_kennlinie = 20
    RULE_kennfeld = 21
    RULE_gruppenstuetzstellen = 22
    RULE_kenntext = 23
    RULE_kgr_info = 24
    RULE_einheit_x = 25
    RULE_einheit_y = 26
    RULE_einheit_w = 27
    RULE_langname = 28
    RULE_displayname = 29
    RULE_var_abhangigkeiten = 30
    RULE_var_abh = 31
    RULE_funktionszugehorigkeit = 32
    RULE_anzahl_x = 33
    RULE_anzahl_y = 34
    RULE_werteliste = 35
    RULE_werteliste_kwb = 36
    RULE_sst_liste_x = 37
    RULE_kf_zeile_liste = 38
    RULE_kf_zeile_liste_r = 39
    RULE_kf_zeile_liste_tx = 40
    RULE_realzahl = 41
    RULE_nameValue = 42
    RULE_textValue = 43
    RULE_integerValue = 44

    ruleNames = [
        "konservierung",
        "kons_kopf",
        "modulkopf_info",
        "mod_zeile",
        "mod_anf_zeile",
        "mod_fort_zeile",
        "mod_ele_name",
        "mod_ele_wert",
        "funktionsdef",
        "funktionszeile",
        "fkt_version",
        "fkt_langname",
        "variantendef",
        "variantenkrit",
        "krit_name",
        "krit_wert",
        "kons_rumpf",
        "kenngroesse",
        "kennwert",
        "kennwerteblock",
        "kennlinie",
        "kennfeld",
        "gruppenstuetzstellen",
        "kenntext",
        "kgr_info",
        "einheit_x",
        "einheit_y",
        "einheit_w",
        "langname",
        "displayname",
        "var_abhangigkeiten",
        "var_abh",
        "funktionszugehorigkeit",
        "anzahl_x",
        "anzahl_y",
        "werteliste",
        "werteliste_kwb",
        "sst_liste_x",
        "kf_zeile_liste",
        "kf_zeile_liste_r",
        "kf_zeile_liste_tx",
        "realzahl",
        "nameValue",
        "textValue",
        "integerValue",
    ]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    T__9 = 10
    T__10 = 11
    T__11 = 12
    T__12 = 13
    T__13 = 14
    T__14 = 15
    T__15 = 16
    T__16 = 17
    T__17 = 18
    T__18 = 19
    T__19 = 20
    T__20 = 21
    T__21 = 22
    T__22 = 23
    T__23 = 24
    T__24 = 25
    T__25 = 26
    T__26 = 27
    T__27 = 28
    T__28 = 29
    T__29 = 30
    T__30 = 31
    T__31 = 32
    T__32 = 33
    T__33 = 34
    NAME = 35
    TEXT = 36
    INT = 37
    FLOAT = 38
    MINUS = 39
    WS = 40
    COMMENT = 41

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class KonservierungContext(ParserRuleContext):
        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.kopf = None  # Kons_kopfContext
            self.rumpf = None  # Kons_rumpfContext

        def kons_kopf(self):
            return self.getTypedRuleContext(dcm20Parser.Kons_kopfContext, 0)

        def kons_rumpf(self):
            return self.getTypedRuleContext(dcm20Parser.Kons_rumpfContext, 0)

        def getRuleIndex(self):
            return dcm20Parser.RULE_konservierung

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterKonservierung"):
                listener.enterKonservierung(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitKonservierung"):
                listener.exitKonservierung(self)

    def konservierung(self):

        localctx = dcm20Parser.KonservierungContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_konservierung)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == dcm20Parser.T__0:
                self.state = 90
                self.match(dcm20Parser.T__0)
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 96
            self.match(dcm20Parser.T__1)
            self.state = 97
            self.match(dcm20Parser.T__2)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 98
                self.match(dcm20Parser.T__0)
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la == dcm20Parser.T__0):
                    break

            self.state = 103
            localctx.kopf = self.kons_kopf()
            self.state = 104
            localctx.rumpf = self.kons_rumpf()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Kons_kopfContext(ParserRuleContext):
        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.info = None  # Modulkopf_infoContext
            self.func_def = None  # FunktionsdefContext
            self.var_def = None  # VariantendefContext

        def modulkopf_info(self):
            return self.getTypedRuleContext(dcm20Parser.Modulkopf_infoContext, 0)

        def funktionsdef(self):
            return self.getTypedRuleContext(dcm20Parser.FunktionsdefContext, 0)

        def variantendef(self):
            return self.getTypedRuleContext(dcm20Parser.VariantendefContext, 0)

        def getRuleIndex(self):
            return dcm20Parser.RULE_kons_kopf

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterKons_kopf"):
                listener.enterKons_kopf(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitKons_kopf"):
                listener.exitKons_kopf(self)

    def kons_kopf(self):

        localctx = dcm20Parser.Kons_kopfContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_kons_kopf)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == dcm20Parser.T__3:
                self.state = 106
                localctx.info = self.modulkopf_info()

            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == dcm20Parser.T__4:
                self.state = 109
                localctx.func_def = self.funktionsdef()

            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == dcm20Parser.T__7:
                self.state = 112
                localctx.var_def = self.variantendef()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Modulkopf_infoContext(ParserRuleContext):
        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._mod_zeile = None  # Mod_zeileContext
            self.m = list()  # of Mod_zeileContexts

        def mod_zeile(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(dcm20Parser.Mod_zeileContext)
            else:
                return self.getTypedRuleContext(dcm20Parser.Mod_zeileContext, i)

        def getRuleIndex(self):
            return dcm20Parser.RULE_modulkopf_info

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterModulkopf_info"):
                listener.enterModulkopf_info(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitModulkopf_info"):
                listener.exitModulkopf_info(self)

    def modulkopf_info(self):

        localctx = dcm20Parser.Modulkopf_infoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_modulkopf_info)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 115
                localctx._mod_zeile = self.mod_zeile()
                localctx.m.append(localctx._mod_zeile)
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la == dcm20Parser.T__3):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Mod_zeileContext(ParserRuleContext):
        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.anf = None  # Mod_anf_zeileContext
            self._mod_fort_zeile = None  # Mod_fort_zeileContext
            self.fort = list()  # of Mod_fort_zeileContexts

        def mod_anf_zeile(self):
            return self.getTypedRuleContext(dcm20Parser.Mod_anf_zeileContext, 0)

        def mod_fort_zeile(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(dcm20Parser.Mod_fort_zeileContext)
            else:
                return self.getTypedRuleContext(dcm20Parser.Mod_fort_zeileContext, i)

        def getRuleIndex(self):
            return dcm20Parser.RULE_mod_zeile

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterMod_zeile"):
                listener.enterMod_zeile(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitMod_zeile"):
                listener.exitMod_zeile(self)

    def mod_zeile(self):

        localctx = dcm20Parser.Mod_zeileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_mod_zeile)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            localctx.anf = self.mod_anf_zeile()
            self.state = 124
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 6, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 121
                    localctx._mod_fort_zeile = self.mod_fort_zeile()
                    localctx.fort.append(localctx._mod_fort_zeile)
                self.state = 126
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 6, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Mod_anf_zeileContext(ParserRuleContext):
        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.n = None  # Mod_ele_nameContext
            self.w = None  # Mod_ele_wertContext

        def mod_ele_name(self):
            return self.getTypedRuleContext(dcm20Parser.Mod_ele_nameContext, 0)

        def mod_ele_wert(self):
            return self.getTypedRuleContext(dcm20Parser.Mod_ele_wertContext, 0)

        def getRuleIndex(self):
            return dcm20Parser.RULE_mod_anf_zeile

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterMod_anf_zeile"):
                listener.enterMod_anf_zeile(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitMod_anf_zeile"):
                listener.exitMod_anf_zeile(self)

    def mod_anf_zeile(self):

        localctx = dcm20Parser.Mod_anf_zeileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_mod_anf_zeile)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(dcm20Parser.T__3)
            self.state = 128
            localctx.n = self.mod_ele_name()
            self.state = 129
            localctx.w = self.mod_ele_wert()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Mod_fort_zeileContext(ParserRuleContext):
        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.w = None  # Mod_ele_wertContext

        def mod_ele_wert(self):
            return self.getTypedRuleContext(dcm20Parser.Mod_ele_wertContext, 0)

        def getRuleIndex(self):
            return dcm20Parser.RULE_mod_fort_zeile

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterMod_fort_zeile"):
                listener.enterMod_fort_zeile(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitMod_fort_zeile"):
                listener.exitMod_fort_zeile(self)

    def mod_fort_zeile(self):

        localctx = dcm20Parser.Mod_fort_zeileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_mod_fort_zeile)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(dcm20Parser.T__3)
            self.state = 132
            localctx.w = self.mod_ele_wert()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Mod_ele_nameContext(ParserRuleContext):
        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.n = None  # NameValueContext

        def nameValue(self):
            return self.getTypedRuleContext(dcm20Parser.NameValueContext, 0)

        def getRuleIndex(self):
            return dcm20Parser.RULE_mod_ele_name

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterMod_ele_name"):
                listener.enterMod_ele_name(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitMod_ele_name"):
                listener.exitMod_ele_name(self)

    def mod_ele_name(self):

        localctx = dcm20Parser.Mod_ele_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_mod_ele_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            localctx.n = self.nameValue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Mod_ele_wertContext(ParserRuleContext):
        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.t = None  # TextValueContext

        def textValue(self):
            return self.getTypedRuleContext(dcm20Parser.TextValueContext, 0)

        def getRuleIndex(self):
            return dcm20Parser.RULE_mod_ele_wert

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterMod_ele_wert"):
                listener.enterMod_ele_wert(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitMod_ele_wert"):
                listener.exitMod_ele_wert(self)

    def mod_ele_wert(self):

        localctx = dcm20Parser.Mod_ele_wertContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_mod_ele_wert)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            localctx.t = self.textValue()
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 137
                self.match(dcm20Parser.T__0)
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la == dcm20Parser.T__0):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunktionsdefContext(ParserRuleContext):
        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._funktionszeile = None  # FunktionszeileContext
            self.f = list()  # of FunktionszeileContexts

        def funktionszeile(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(dcm20Parser.FunktionszeileContext)
            else:
                return self.getTypedRuleContext(dcm20Parser.FunktionszeileContext, i)

        def getRuleIndex(self):
            return dcm20Parser.RULE_funktionsdef

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterFunktionsdef"):
                listener.enterFunktionsdef(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitFunktionsdef"):
                listener.exitFunktionsdef(self)

    def funktionsdef(self):

        localctx = dcm20Parser.FunktionsdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_funktionsdef)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(dcm20Parser.T__4)
            self.state = 143
            self.match(dcm20Parser.T__0)
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 144
                localctx._funktionszeile = self.funktionszeile()
                localctx.f.append(localctx._funktionszeile)
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la == dcm20Parser.T__6):
                    break

            self.state = 149
            self.match(dcm20Parser.T__5)
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 150
                self.match(dcm20Parser.T__0)
                self.state = 153
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la == dcm20Parser.T__0):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunktionszeileContext(ParserRuleContext):
        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.n = None  # NameValueContext
            self.v = None  # Fkt_versionContext
            self.l = None  # Fkt_langnameContext

        def nameValue(self):
            return self.getTypedRuleContext(dcm20Parser.NameValueContext, 0)

        def fkt_version(self):
            return self.getTypedRuleContext(dcm20Parser.Fkt_versionContext, 0)

        def fkt_langname(self):
            return self.getTypedRuleContext(dcm20Parser.Fkt_langnameContext, 0)

        def getRuleIndex(self):
            return dcm20Parser.RULE_funktionszeile

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterFunktionszeile"):
                listener.enterFunktionszeile(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitFunktionszeile"):
                listener.exitFunktionszeile(self)

    def funktionszeile(self):

        localctx = dcm20Parser.FunktionszeileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_funktionszeile)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(dcm20Parser.T__6)
            self.state = 156
            localctx.n = self.nameValue()
            self.state = 157
            localctx.v = self.fkt_version()
            self.state = 158
            localctx.l = self.fkt_langname()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Fkt_versionContext(ParserRuleContext):
        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.t = None  # TextValueContext

        def textValue(self):
            return self.getTypedRuleContext(dcm20Parser.TextValueContext, 0)

        def getRuleIndex(self):
            return dcm20Parser.RULE_fkt_version

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterFkt_version"):
                listener.enterFkt_version(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitFkt_version"):
                listener.exitFkt_version(self)

    def fkt_version(self):

        localctx = dcm20Parser.Fkt_versionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_fkt_version)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            localctx.t = self.textValue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Fkt_langnameContext(ParserRuleContext):
        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.t = None  # TextValueContext

        def textValue(self):
            return self.getTypedRuleContext(dcm20Parser.TextValueContext, 0)

        def getRuleIndex(self):
            return dcm20Parser.RULE_fkt_langname

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterFkt_langname"):
                listener.enterFkt_langname(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitFkt_langname"):
                listener.exitFkt_langname(self)

    def fkt_langname(self):

        localctx = dcm20Parser.Fkt_langnameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_fkt_langname)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            localctx.t = self.textValue()
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 163
                self.match(dcm20Parser.T__0)
                self.state = 166
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la == dcm20Parser.T__0):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariantendefContext(ParserRuleContext):
        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._variantenkrit = None  # VariantenkritContext
            self.v = list()  # of VariantenkritContexts

        def variantenkrit(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(dcm20Parser.VariantenkritContext)
            else:
                return self.getTypedRuleContext(dcm20Parser.VariantenkritContext, i)

        def getRuleIndex(self):
            return dcm20Parser.RULE_variantendef

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterVariantendef"):
                listener.enterVariantendef(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitVariantendef"):
                listener.exitVariantendef(self)

    def variantendef(self):
